fix scrollbar

--- a/style.css
+++ b/style.css
@@ -58,16 +58,18 @@ p {
 }
 /*-------- Scroll bar --------*/
 body::-webkit-scrollbar {
-	width: 6px;
+	width: 8px;
 }
 body::-webkit-scrollbar-thumb {
 	background-color: darkgrey;
+	border-radius: 5px;
 }
 div::-webkit-scrollbar {
-	width: 6px;
+	width: 8px;
 }
 div::-webkit-scrollbar-thumb {
 	background-color: darkgrey;
+	border-radius: 5px;
 }
 
 /*-------- Nav --------*/
